<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校视通</string>
    <string name="action_settings">Settings</string>

    <!-- common -->
    <string name="confirm">确定</string>
    <string name="yes">是</string>
    <string name="cancel">取消</string>
    <string name="logout">退出</string>
    <string name="exit">退出</string>
    <string name="warning">提示</string>
    <string name="no_net">当前没有网络</string>
    <!-- 主界面 -->
    <string name="main_label_child_status">小孩状态</string>
    <string name="main_notice_leave_school">已离校</string>
    <string name="main_notice_not_in_school">未到校</string>
    <string name="main_notice_in_school">已在校</string>
    <string name="main_time_test">20:20</string>
    <string name="main_time_test_tail">pm</string>
    <string name="main_time_test_2">20:20pm</string>
    
    <string name="main_circle_text_enter">来</string>
    <string name="main_circle_text_leave">离</string>
    <string name="main_message_new_text">new</string>
    
    <string name="main_student_enter_school">进校门</string>
    <string name="main_student_leave_school">出校门</string>
    <string name="capture_pic_student_enter_school_pic">进校门图片</string>
    <string name="capture_pic_student_leave_school_pic">出校门图片</string>
    <string name="parent_warning_message">孩子可能早退了哦~</string>
    <string name="message_list_page_title">通知详情</string>
    <string name="video_list_title">视频</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="please_input_sign_txt">请输入您的json字符串</string>
    <string name="get_sms_code">获取短信验证码</string>
    <string name="get_sms_code_fail">获取短信验证码失败</string>
    <string name="please_input_phonenumber_txt">请输入手机号码</string>
    <string name="sms_verify_code_received">请输入您收到的手机验证码</string>
    <string name="please_input_userid_txt">请输入您的userid</string>

    <!-- 播放界面 -->
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="realplay_password_error_title">请输入设备密码</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_password_error_message1">初始密码为12345，若密码已被修改，请输入修改后的密码</string>
    <string name="realplay_encrypt_password_error_message">您的视频已加密，请输入密码进行查看，初始密码为机身标签上的验证码，如果没有验证码，请输入ABCDEF（密码区分大小写）</string>
    <string name="realplay_password_error_message3">您的设备版本过低，需要输入设备密码，建议您升级设备</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="realplay_set_fail_status">视频播放失败，设备已开启隐私保护</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_loading">正在加载，请稍候&#8230;</string>
    <string name="start_voice_talk">正在发起对讲</string>
    <string name="remoteplayback_record_fail">录像失败</string>
    <string name="remoteplayback_capture_fail">抓图失败</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="camera_not_online">设备不在线</string>
    <string name="get_sms_code">获取短信验证码</string>
    <string name="get_sms_code_fail">获取短信验证码失败</string>
    <string name="verify_sms_code_fail">验证短信验证码失败</string>
    <string name="verify_sms_code_success">验证短信验证码成功</string>
    <string name="sms_verify_bind_error">该appkey下已绑定重复的的userId或phone！</string>
    <string name="please_input_sign_get_sms_txt">请输入私有云后台组装的账户绑定的短信签名认证的json字符串：/n（若对流程不清楚，请阅读《私有云账户对接流程》）</string>
    <string name="submit_sms_code">提交短信验证</string>
    <string name="press_to_talk_release_to_listen">按住说话\n松开收听</string>
    <string name="get_camera_list_fail">获取设备列表失败</string>
	<string name="local_network_exception">没有可用网络，请检查您的网络</string>  
	<string name="setting_video_level">正在设置画面质量…</string>  
	<string name="talking">对讲中…</string>  
	<string name="remoteplayback_SDCard_disable_use">存储卡不可用</string>  
	<string name="remoteplayback_record_fail_for_memory">录像中断,存储空间已满</string> 
	<string name="device_password_is_null">设备密码不能为空</string> 
	<string name="remoteplayback_capture_fail_for_memory">抓图失败,存储空间已满</string>  
	
    <!-- 视频列表 -->
    <string name="get_camera_list_fail">获取设备列表失败</string>
    <!-- 信息页面 -->
<!--     旧页面 -->
	
	
    <string name="main_warninging_message_child_not_in_school">您的孩子未到学校</string>
    <string name="main_warninging_message_child_in_school">您的孩子已到学校</string>
    <string name="main_warninging_message_child_in_school_in_time">您的孩子按时已到学校</string>
    <string name="main_warninging_message_child_late">您的孩子迟到了</string>
    <string name="main_warninging_message_child_has_not_leave_school">您的孩子未离学校</string>
    <string name="main_warninging_message_child_has_leave_school">您的孩子已离学校</string>
    
    <string name="main_warninging_message_child_leave_earlier">您的孩子早退了</string>
    <string name="main_warning_network_unavliable">警告，当前网络不可用</string>
    <string name="main_getting_message">获取信息中</string>
	<string name="main_on_message">暂无消息</string>
	
    <string name="setting_parent_label">家长</string>
    <string name="setting_name_label">姓名</string>
    <string name="setting_phone_label">手机号码</string>
    <string name="setting_undetermined_label">待定</string>
    <string name="setting_school_label">学校</string>
    <string name="setting_class_label">班级</string>
    <string name="setting_child_label">孩子</string>
    <string name="setting_student_id_label">学号</string>
    <string name="setting_title_my_info">我的信息</string>

	
	<string name="login_input_account_label">账号</string>
	<string name="login_input_password_label">密码</string>
	<string name="login_button_text">登陆</string>
	<string name="login_wait_box_loadding">正在登陆……</string>
	<string name="login_username_password_empty">用户名或密码为空</string>
	<string name="login_username_password_error">用户名或密码错误</string>
	
	
	
	<string name="change_pwd_warning">默认密码存在风险,请修改</string>
	
	<string name="change_pwd_input_phone_num">请输入手机号</string>
	<string name="change_pwd_input_verify_code">请输入验证码</string>
	<string name="change_pwd_button_get_verify_code">获取验证码</string>
	<string name="change_pwd_button_get_verify_code_again">重新获取验证码</string>
	<string name="change_pwd_input_new_password">请输入新密码</string>
	<string name="change_pwd_input_new_password_again">请再次输入新密码</string>
	<string name="change_pwd_show_password">显示密码</string>
	<string name="change_pwd_please_set_new_password">请设置密码</string>
	<string name="change_pwd_title_text">修改密码</string>
	<string name="change_pwd_warning_phone_num_empty">手机号码为空</string>
	<string name="change_pwd_warning_phone_num_incorrect">手机号码 错误</string>
	<string name="change_pwd_change_password_success">修改密码成功，请重新登陆</string>
	
	<string name="video_list_nomore_video">已无更多监控点</string>
	
	
    <string name="message_list_page_title">通知详情</string>
    <string name="message_list_page_no_more_data">没有更多数据</string>
	
    
    
    <string name="real_play_dialog_warning_title">提示</string>
    <string name="real_play_dialog_warning_no_wifi">切换为非wifi,是否继续观看</string>
    <string name="real_play_dialog_warning_wifi">切换为wifi</string>
    <string name="real_play_dialog_warning_no_net"> 网络断开</string>
	
	<string name="error_network_2000_error">网络错误</string>
	<string name="error_network_2001_timeout">请求超时</string>
	<string name="error_network_2002_decode_response">解码应答出错</string>
	<string name="error_network_2003_no_status_return">无状态返回</string>
	<string name="error_network_2004_unable_to_connect_server">无法连接服务器,请检查网络</string>
	<string name="error_network_2005_unavailable">网络不可用</string>
	<string name="error_network_2006_socket_timeout">请求超时</string>
	<string name="error_network_2009_error_unknow">未知错误</string>
	<string name="error_network_2010_sign_validate_error">签名校验错误</string>
	
	
	<string name="error_system_3201_get_verify_code_error">获取短信验证码失败</string>
	<string name="error_system_3202_reset_password_error">重置密码失败</string>
	
	<string name="error_user_9001_no_child_info">没有获取到孩子信息</string>
	<string name="error_user_9002_no_nomal_time">无法获取到学校上学时间段</string>
	<string name="error_user_9003_argument">请求参数错误</string>
	<string name="error_user_9100_login_error">登陆错误</string>
	<string name="error_user_9101_login_password_error">用户名密码错误</string>
	<string name="error_user_9102_login_account_or_password_empty">用户名密码为空</string>
	<string name="error_user_9201_change_pwd_get_sms_code_phone_empty">电话号码为空</string>
	<string name="error_user_9202_change_pwd_get_sms_code_phone_error">电话号码格式错误</string>
	<string name="error_user_9203_change_pwd_password_different">两次输入的密码不一致</string>
	<string name="error_user_9204_change_pwd_verify_code_empty">验证码为空</string>
	<string name="error_user_9205_change_pwd_new_password_empty">新密码为空</string>
	
	
	
</resources>