<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:onClick="onClick">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="62dp"
        android:contentDescription="@null"
        android:src="@drawable/login_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textColor="@color/main_status_green"
        android:textSize="@dimen/login_app_name_text_size" />

    <LinearLayout
        style="@style/login_input_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/login_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_input_account_label" />

        <EditText
            android:id="@+id/et_login_user_account"
            style="@style/login_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        style="@style/login_input_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/login_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_input_password_label" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/login_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/login_login_button_background"
        android:padding="15dp"
        android:text="@string/login_button_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_login_button_text_size" 
        android:onClick="onClick"/>
	
</LinearLayout>