<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_setting_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        style="@style/setting_head_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_child_label" />

    <LinearLayout
        style="@style/setting_item_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/setting_item_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_horizontal"
            android:text="@string/setting_name_label" />

        <TextView
            android:id="@+id/tv_child_name"
            style="@style/setting_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        style="@style/setting_item_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/setting_item_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_horizontal"
            android:text="@string/setting_student_id_label" />

        <TextView
            android:id="@+id/tv_child_student_id"
            style="@style/setting_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        style="@style/setting_item_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/setting_item_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_horizontal"
            android:text="@string/setting_undetermined_label" />

        <TextView
            android:id="@+id/tv_child_undefine"
            style="@style/setting_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_horizontal" />
    </LinearLayout>

</LinearLayout>