<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.hikvision.parentdotworry.costomui.TitleBar
        android:id="@+id/tb_title_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" />

    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:id="@+id/sv_setting_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tb_title_bar" >

        <LinearLayout
            android:id="@+id/ll_setting_group_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp" 
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_setting_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_head_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_parent_label" />

                <LinearLayout
                    style="@style/setting_item_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/setting_item_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center_horizontal"
                        android:text="@string/setting_name_label" />

                    <TextView
                        android:id="@+id/tv_parent_name"
                        style="@style/setting_item_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    style="@style/setting_item_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/setting_item_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center_horizontal"
                        android:text="@string/setting_phone_label" />

                    <TextView
                        android:id="@+id/tv_parent_phone"
                        style="@style/setting_item_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    style="@style/setting_item_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/setting_item_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center_horizontal"
                        android:text="@string/setting_undetermined_label" />

                    <TextView
                        android:id="@+id/tv_parent_undefine"
                        style="@style/setting_item_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|center_horizontal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>

</RelativeLayout>