<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_message_list_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <com.hikvision.parentdotworry.costomui.TitleBar
        android:id="@+id/tb_title_bar"
        style="@style/title_bar_style" />

    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ptrsv_main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrMode="pullFromStart" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rl_main_color_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_status_green" >

                <FrameLayout
                    android:id="@+id/fl_main_child_status"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:scrollY="50dp" >

                    <ImageView
                        android:id="@+id/iv_main_child_status"
                        android:layout_width="wrap_content"
                        android:layout_height="260dp"
                        android:src="@drawable/main_in_school"
                        android:scaleType="centerCrop"
                        android:contentDescription="@null"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/fl_main_child_status"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="11dp"
                    android:text="@string/main_time_test"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/main_time_text_size" />

                <TextView
                    android:id="@+id/tv_main_time_text_tail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/fl_main_child_status"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="14dp"
                    android:layout_toRightOf="@+id/tv_current_time"
                    android:text="@string/main_time_test_tail"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/main_time_tail_text_size" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_main_warninging_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/main_notice_leave_school"
                android:textColor="@color/main_status_green"
                android:textSize="@dimen/main_warning_text_size" />

            <com.hikvision.parentdotworry.costomui.TimeBarV3
                android:id="@+id/tb_main_timebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_time_bar_background"
                android:paddingBottom="36dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_message_list_background" >

                <ProgressBar
                    android:id="@+id/pb_loadding"
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:id="@+id/ll_no_message_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_item_margin_top"
                    android:background="@drawable/main_message_item_background"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/no_news" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/main_on_message"
                        android:textColor="@color/main_no_message_text_color"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_main_message_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <!-- item -->
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>

</LinearLayout>